--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.5.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "carousel": "0.0.3",
+    "main": "^1000.0.1",
+    "save": "^2.4.0",
+    "slick": "^1.12.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^6.4.8"
+  }
 }
